# qtdemo

./: debug-minimal.bat
Coding/: CMakeLists.txt  customlabel.cpp  customlabel.h  main.cpp  multilinelabel.cpp  multilinelabel.h  testdialog.cpp  testdialog.h  testdialog.ui
Coding/res/: icons.qrc
Coding/res/stylesheet/: qlabel.qss
